--- a/style.css
+++ b/style.css
@@ -9,13 +9,19 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;    height: 100%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    width: 90%;    
+    height: 96%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background-color: whitesmoke;
     border-radius: 100px;
+    transition: opacity 0.3s ease-in-out;
 }
 
 .h1 {
@@ -73,11 +79,11 @@ body {
     background-color: #333;
     color: #fff;
     border: none;
-    padding: 5px 10px;
+    padding: 10px 20px;
     cursor: pointer;
-    margin: 0 5px;
+    margin: 0 10px;
     outline: none;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .selector-btn.active {
